--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -126,8 +126,10 @@ a:focus{
 .wk-li > li{
   padding-right: 17px;
 }
-
-p, li, a, table, .panel-heading > .panel-title, .btn{
+h1, h2, h3, h4, h5, h6{
+  font-weight: 300;
+}
+p, li, a, table, .panel-heading > .panel-title{
   font-size: 12px;
 }
 .wks-img{
