--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,8 +140,16 @@ p, li, a, table, .panel-heading > .panel-title{
   height: 80px;
   width: 80px;
 }
+.form-control{
+  padding: 3px 6px;
+}
+.cs-lg > .list-group-item{
+  background-color: #f5f5f5;
+}
 #footer{
   padding-top: 20px;
   padding-bottom: 20px;
   background-color: #f2f2f2;
+  margin-top: 50px;
+  margin-bottom: 0px;
 }
